# KEUL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
examples/: Benchmark.cpp  StringUtilities.cpp  Timer.cpp  UnitTests.cpp  benchmark.cpp  string-utilities.cpp  timer.cpp  unit-tests.cpp
include/: Testing.h
include/Error/: ErrorDef.h
include/FileSystem/: FileReader.h
include/Internal/: Init.h
include/KEUL/: KEUL.hpp  Testing.h  UnitTests.hpp  Utility.h
include/KEUL/Error/: ErrorDef.hpp
include/KEUL/FileSystem/: FileReader.hpp
include/KEUL/Internal/: EngineLogging.h  EngineLogging.hpp  Init.h  Init.hpp
include/KEUL/Logging/: Logger.h  Logger.hpp  LoggerDef.h  LoggerDef.hpp  LoggerPolicies.hpp  Print.h  SimpleLogger.h  SimpleLogger.hpp
include/KEUL/Misc/: Assert.h  Assert.hpp  FromIOTA.hpp  Random.h  Random.hpp  Range.h  Range.hpp
include/KEUL/String/: StringLib.h  StringLib.hpp
include/Logging/: Logger.h  LoggerPolicies.h  Print.h  SimpleLogger.h
include/Misc/: Random.h
include/String/: CustomFormatters.h  CustomFormattingFunctions.h  Format.h  FormatImpl.h  StringLib.h  StringLib_impl.h
include/Time/: Benchmark.h  Clock.h  LoopBenchmark.h
include/UnitTests/: TestManager.h
include/keul/: keul.hpp  unit-tests.hpp
tests/: test.cpp
tests/ErrorTest/: TestErrorNames.cpp
tests/FileTest/: TestFileReader.cpp
tests/MiscTest/: TestFromIOTA.cpp  TestRandom.cpp  TestRange.cpp
tests/TimeTest/: TestTimeUnit.cpp  TestTimer.cpp
tests/assets/: Basic.txt  Unicode.txt
tests/error-test/: test-error-names.cpp
tests/file-test/: test-file-reader.cpp
tests/misc-test/: test-from-iota.cpp  test-random.cpp  test-range.cpp
tests/time-test/: test-time-unit.cpp  test-timer.cpp
(+75 files in other folders)
